--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/db-school?createDatabaseIfNotExist=true
 
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=root
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
 
