--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/db-school?createDatabaseIfNotE
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto=update
 
 # Web Server (Tomcat) configuration :
